# bilbot_baggins

bilbot_control/: CMakeLists.txt  package.xml
bilbot_control/config/: control.yaml  diff_drive.yaml  gripper.yaml  joints.yaml
bilbot_control/launch/: bilbot_control.launch  control.launch
bilbot_description/: CMakeLists.txt  package.xml
bilbot_description/launch/: description.launch
bilbot_description/meshes/: battery_case.stl
bilbot_description/urdf/: bilbot.gazebo  bilbot.xacro  macros.xacro  materials.xacro
bilbot_drive/: CMakeLists.txt  package.xml
bilbot_drive/cfg/: Pos_Controller.cfg
bilbot_drive/include/: bilbot_hardware.hpp
bilbot_drive/include/bilbot_drive/: bilbot_hardware.hpp  control_law.hpp
bilbot_drive/launch/: drive.launch
bilbot_drive/src/: bilbot_base.cpp  bilbot_hardware.cpp  control_law.cpp  motor_controller.cpp  rotary_encoder.cpp  wheel_state.cpp
bilbot_gazebo/: CMakeLists.txt  package.xml
bilbot_gazebo/launch/: bilbot_world.launch
bilbot_gazebo/worlds/: bilbot.world
bilbot_hardware/: CMakeLists.txt  package.xml
bilbot_hardware/cfg/: Controller.cfg  controller.cfg
bilbot_hardware/include/bilbot_hardware/: laser.hpp  merge.hpp  motor_controller.hpp  rotary_encoder.hpp  ultrasonic.hpp
bilbot_hardware/launch/: hardware.launch
bilbot_hardware/src/: laser.cpp  merge.cpp  motor_controller.cpp  motor_output.cpp  rotary_encoder.cpp  ultrasonic.cpp  ultrasonic_sensor.cpp  wheel_state.cpp
bilbot_msgs/: CMakeLists.txt  package.xml
bilbot_msgs/msg/: Drive.msg
bilbot_nav/: CMakeLists.txt  package.xml
bilbot_nav/include/bilbot_nav/: nav_goals.hpp
bilbot_nav/launch/: amcl_diff.launch  nav.launch
bilbot_nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
bilbot_nav/src/: nav_goals.cpp
